# echomem-agent

./: .gitignore  README.md  pyproject.toml
configs/: agent.local.example.json
docs/design/agent/: chat-design.html  chenmo.html  chenmo_eval_partial.json  chenmo_eval_progress.jsonl  chenmo_eval_results.json  context-engine.html  design.html  evaluation_scenario.md  locomo-eval-design.html  principle.html  simple-scenario.md  webserver.html
scripts/: run_chenmo_eval.py
src/agent/: __init__.py  chat_service.py  config.py  context_builder.py  echomemory_client.py  graph_eval_service.py  locomo_dataset.py  locomo_eval_service.py  model_client.py  server.py
tests/: test_agent_server.py  test_config.py
