[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "echomem-agent"
version = "0.1.0"
description = "Standalone EchoMemory agent playground."
requires-python = ">=3.10"

[project.scripts]
echomem-agent = "agent.server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.ruff]
line-length = 100
target-version = "py310"
